1. fixed few bugs 2. java formatting adjustment